# readme-peacock

./: LICENSE  README.md  action.yml  index.html  peacock.py  pyproject.toml
.github/workflows/: readme-peacock.yml
docs/: index.html
readme_peacock.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
